# minic_compiler

./: ASTNode.h  CMakeLists.txt  Node.h  SNode.h  Symbol.c  Symbol.h  Ucode.c  Ucode.h  main.c  makefile  parser.y  prime.mc  recursion_fibonacci.mc  scanner.l
